--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "name": "todo-server",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "nodemon": "^2.0.18"
   },
   "scripts": {
     "start": "node index.js",
-    "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
